--- a/src/App.css
+++ b/src/App.css
@@ -2,12 +2,19 @@
   min-height: 100vh;
   width: 100vw;
   display: flex;
+  flex-direction: column;
   align-items: center;
   justify-content: center;
+  background-image: url("https://static.vecteezy.com/ti/vetor-gratis/p1/9169455-ceu-dourado-por-do-sol-na-costa-natureza-paisagem-vetor.jpg");
+}
+
+.container p {
+  display: block;
 }
 
 .form {
   background-color: #000008;
+  box-shadow: 2px 0 10px #000;
   border: 1px solid var(--white);
   border-radius: 4px;
   padding: 2rem;
